[Blocks] Fix spacing of fields in inspector

--- a/packages/blocks/components/field/style.scss
+++ b/packages/blocks/components/field/style.scss
@@ -3,13 +3,16 @@
    ========================================================================== */
 
 .cf-field {
+	.block-editor .cf-block__fields > &:not(:first-child) {
+		margin-top: 14px;
+	}
+
 	.wp-block & {
 		font-family: $wp-font;
 		font-size: $wp-font-size;
 		line-height: $wp-line-height;
 		color: $gb-dark-gray-500;
 		min-width: 0;
-		margin-top: 14px;
 	}
 
 	.wp-block .cf-complex & {
